--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -120,7 +120,7 @@ http {
             access_log off;
             log_not_found off;
             expires max;
-            add_header  Content-Encoding  gzip;  
+            add_header  Content-Encoding  br;  
             root /assets;
         }
         location ~* \.(eot|ttf|woff|woff2)$ {
