--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-router": "^6.0.0-alpha.2",
     "react-router-dom": "^6.0.0-alpha.2",
     "react-swipeable": "^5.5.1",
+    "react-transition-group": "^4.3.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
@@ -74,6 +75,7 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/react-transition-group": "^4.2.4",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.1",
     "@types/styled-components": "^5.0.1",
