Added service worker and tooling, updated buckets and linted

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,6 +5,7 @@ COPY client/package.json .
 RUN yarn
 COPY client/tsconfig.json .
 COPY client/webpack.config.js .
+COPY client/webpack.config.sw.js .
 COPY client/webpack.config.dll.js .
 RUN yarn webpack --config webpack.config.dll.js
 COPY client/webpack.config.prod.js .
