--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -24,6 +24,15 @@ http {
             return 200 "healthy";
         }        
 
+        location /sw.js {
+            brotli off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://node-app;
+        }
+
+
         location / {
             
             brotli              on;
