--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -116,16 +116,21 @@ http {
         location /report.html {     
             root /assets;
         }
-        location ~* \.(js)$ {
-            access_log off;
-            log_not_found off;
+        location ~* \.(js|map)$ {
+            # access_log off;
+            # log_not_found off;
             expires max;
             add_header  Content-Encoding  br;  
             root /assets;
+            add_header 'Access-Control-Allow-Origin' "*" always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+
         }
         location ~* \.(eot|ttf|woff|woff2)$ {
-            access_log off;
-            log_not_found off;
+            # access_log off;
+            # log_not_found off;
             expires max;
             root /public;
             add_header 'Access-Control-Allow-Origin' "*" always;
@@ -135,7 +140,10 @@ http {
 
         }
         location / {     
-            add_header Access-Control-Allow-Origin *;
+            add_header 'Access-Control-Allow-Origin' "*" always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
             root /public;
         }
         ssl_certificate /etc/ssl/certs/local.carpedalan.com.pem;
@@ -253,6 +261,8 @@ http {
             return 200 "healthy";
         }        
 
+        
+
         location /dist {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -282,6 +292,20 @@ http {
 
         location / {
             gzip on;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://node-app;
+        }
+        location /sw.js {
+            add_header  Content-Encoding  br;              
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://node-app;
+        }
+        location /sw.js.map {
+            add_header  Content-Encoding  br;              
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme; 
