--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@react-hook/throttle": "^1.0.12",
     "@testing-library/jest-dom": "^5.1.1",
     "@types/react-window-infinite-loader": "^1.0.2",
     "axios": "^0.19.2",
@@ -55,7 +56,13 @@
     "webpack-s3-plugin": "^1.0.3",
     "webpack-stats-plugin": "^0.3.1",
     "webpack-stylish": "^0.1.8",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-visualizer-plugin": "^0.1.11",
+    "workbox-cacheable-response": "^5.1.1",
+    "workbox-core": "^5.1.1",
+    "workbox-precaching": "^5.1.1",
+    "workbox-routing": "^5.1.1",
+    "workbox-strategies": "^5.1.1",
+    "workbox-webpack-plugin": "^5.1.1"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.12.0",
