Bunch of stuff! * TS 3.9.0 * added public key to dev config * Fixed some orientation stuffs * Added cool title gradient * Added blur to modal * Added hamburger * Super spiced up the sidebar with CSSTransitions * Fixed empty usePosts problem * Added photo/grid icon * Added correct local aliases in pulumi * Added and commented out datadog (its expensive!) * Adjusted EBS for savings * Got rid of redis cluster, just using rep group * Added meta APIi redis caching, and tags * Added server timing * Added svgs to tag views * Renamed del

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "workbench.colorCustomizations": {
+    "terminal.foreground": "#ff04f9",
+    "terminal.background": "#0c0835",
     "activityBar.background": "#3a2c45",
     "activityBar.activeBackground": "#3a2c45",
     "activityBar.activeBorder": "#75624a",
