--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -295,6 +295,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme; 
+            # add_header Server-Timing 'Upstream; dur=$upstream_connect_time desc="Upstream connect time";';
             proxy_pass http://node-app;
         }
         location /sw.js {
@@ -313,9 +314,11 @@ http {
         }
         location /v1/ {
             gzip on;
+            # add_header Server-Timing 'Upstream; dur=5s desc="Upstream connect time";';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme; 
+            
             proxy_pass http://node-app;
         }
         location /v1/refresh/ {
