--- a/public/manifest.json
+++ b/public/manifest.json
@@ -51,5 +51,5 @@
     "theme_color": "#fbbfff",
     "background_color": "#fbbfff",
     "display": "standalone",
-    "start_url": "https://prod.carpedalan.com"
+    "start_url": "https://carpedalan.com"
 }
