--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,7 @@
     "styled-components": "^5.0.1",
     "ts-loader": "^6.2.1",
     "tslib": "^1.11.1",
-    "typescript": "^3.8.3",
+    "typescript": "3.9.0-beta",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.11",
